crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_list_view_status_line_after_rename.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: "render_to_text(&state, snapshot_now(), 80, 12)"
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│ ▶ GitHub (ben-personal@example.co…    914 994   ██████░░░░   18s             │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ Renamed to ben-personal@example.com                                          │
└──────────────────────────────────────────────────────────────────────────────┘
