crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_list_view_status_line_after_rename_no_color.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
assertion_line: 1250
expression: "render_to_styled_text(&state, snapshot_now(), true, 80, 12)"
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│ ▶ GitHub (ben-personal@example.co…    914 994  ██████░░░░   18s  ↪   255 062 │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ Renamed to ben-personal@example.com                                          │
└──────────────────────────────────────────────────────────────────────────────┘
─── styles ───
(1..22, 0) " Paladin [plaintext] " fg=Reset bg=Reset mod=BOLD
(2..67, 3) "▶ GitHub (ben-personal@example.co…    914 994  ██████░░░░   18s  " fg=Reset bg=Reset mod=BOLD | REVERSED
(67..78, 3) "↪   255 062" fg=Reset bg=Reset mod=BOLD | DIM | REVERSED
