crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_list_view_status_line_after_settings_save_no_color.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: "render_to_styled_text(&state, snapshot_now(), true, 80, 12)"
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│ ▶ GitHub (ben@example.com)            914 994  ↪   255 062  ██████░░░░   18s │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ Settings updated.                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
─── styles ───
(1..22, 0) " Paladin [plaintext] " fg=Reset bg=Reset mod=BOLD
(2..49, 3) "▶ GitHub (ben@example.com)            914 994  " fg=Reset bg=Reset mod=BOLD | REVERSED
(49..60, 3) "↪   255 062" fg=Reset bg=Reset mod=BOLD | DIM | REVERSED
(60..78, 3) "  ██████░░░░   18s" fg=Reset bg=Reset mod=BOLD | REVERSED
