crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_list_view_status_line_after_uri_add.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: "render_to_text(&state, snapshot_now(), 80, 12)"
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│ ▶ Example (alice@example.com)         914 994   ██████░░░░   18s             │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ Added Example:alice@example.com.                                             │
└──────────────────────────────────────────────────────────────────────────────┘
