crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_list_view_status_line_after_uri_add_no_color.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: "render_to_styled_text(&state, snapshot_now(), true, 80, 12)"
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│ ▶ Example (alice@example.com)         914 994   ██████░░░░   18s             │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ Added Example:alice@example.com.                                             │
└──────────────────────────────────────────────────────────────────────────────┘
─── styles ───
(1..22, 0) " Paladin [plaintext] " fg=Reset bg=Reset mod=BOLD
(2..78, 3) "▶ Example (alice@example.com)         914 994   ██████░░░░   18s            " fg=Reset bg=Reset mod=BOLD | REVERSED
